{{$NEXT}}
    - Removed Test::Aggregate::Nested (prevented installation on current perl)
    - Updated DistZilla config to match other modules
    - SKIP tests that are suffering from CGI version issues

1.00 2017-07-24

    - Initial release
    - broken out from main HTML-FormFu distribution